testsuite/tests/properties/invalid_node_builder/pos_arg/test.lkt
from common import BaseExample, FooNode

@synthetic class EmptyNode: FooNode {
}

class Example: BaseExample {
    @lazy prop: EmptyNode = EmptyNode.builder(1).build()
}
